# AED3

./: .gitignore  readme.md
MINESWEEPER/: bib.md  infos.md  readme.md
RSA_AES/: N.txt  bib.md  infos.txt  readme.md  todo.md
RSA_AES/data/: N.txt  enunciado.txt  hexa_key_for_rsa_public.hash  key_for_rsa_public.hash  key_message.txt  key_private.pem  key_public.pem  message.txt  resultadoN.txt  senha_hash.txt
RSA_AES/data/dec_key_public_test/: key_public_decAES128CFB.txt  key_public_decAES256CBC.txt  key_public_decAES256CFB.txt  key_public_decAES256ECB.txt  key_public_decDESEDECFB.txt  key_public_decDESEDEOFB.txt
RSA_AES/data/source/: key_for_message.en  key_public.en  message.en
RSA_AES/output/: test
RSA_AES/src/: bruteforce_atk.cpp  main.cpp  private_key_rsa.py
TSP/: andamento.txt  bib.md  readme.md  todo.md
TSP/output/: approximate  debug  main  optimal  test
TSP/src/: main.cpp  tsp_app.cpp  tsp_opt.cpp
TSP/src/approximate_tsp/: mst_dfs.cpp  mst_dfs.h  prim_mst.cpp  prim_mst.h
TSP/src/buildgraph/: buildgraph.cpp  buildgraph.h
TSP/src/dfs/: dfs.cpp  dfs.h
TSP/src/optimal_tsp/: bruteforce.cpp  bruteforce.h
TSP/src/prim/: prim_mst.cpp
TSP/src/prim_mst/: prim_mst.cpp  prim_mst.h
minesweeper_solver/: CMakeLists.txt  Makefile  bib.md  infos.md  readme.md
minesweeper_solver/benchmark/: main.cpp  main2.cpp
minesweeper_solver/core/include/: AutoPlayer.h  Board.h  BoardGenerator.h  BruteForceSolver.h  DeterministicSolver.h  FrontierExtractor.h  MonteCarloSolver.h  PairHash.h
minesweeper_solver/core/src/: AutoPlayer.cpp  Board.cpp  BoardGenerator.cpp  BruteForceSolver.cpp  DeterministicSolver.cpp  FrontierExtractor.cpp  MonteCarloSolver.cpp
minesweeper_solver/gui/: BoardWidget.cpp  BoardWidget.h  ControlsPanel.cpp  ControlsPanel.h  MainWindow.cpp  main.cpp  mainwindow.ui
minesweeper_solver/tests/: main.cpp  main_autoplayer.cpp  main_benchmark_mc_vs_bf.cpp  main_board.cpp  main_deterministic.cpp
